--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Flask
-Flask-SQLAlchemy
-Flask-Bcrypt
 Flask-Cors
-google-generativeai
+apscheduler
 python-dotenv
 pytz
+supabase
+google-generativeai
