--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-Flask
-Flask-Cors
+flask
+flask-cors
 apscheduler
 python-dotenv
-pytz
 supabase
 google-generativeai>=0.8.3
 firebase-admin
+pytz
+requests
